--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
-  "name": "typescript",
-  "version": "0.0.0",
-  "private": true,
-  "dependencies": {
-    "@types/three": "^0.137.0",
-    "three": "^0.137.5"
-  }
+    "name": "typescript",
+    "version": "0.0.0",
+    "private": true,
+    "main": "index.html",
+    "scripts": {
+        "start": "parcel index.html --open",
+        "build": "parcel build index.html"
+    },
+    "dependencies": {
+        "three": "^0.137.5",
+        "parcel-bundler": "^1.6.1"
+    },
+    "devDependencies": {
+        "typescript": "4.4.4",
+        "@types/three": "^0.137.0"
+    }
 }
